--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Aitvaric",
   "author": "Torango.io",
-  "version": "1.0.56",
+  "version": "1.0.57",
   "api_version": 2,
   "default_locale": "en-us",
   "settings": [
@@ -958,13 +958,28 @@
         },
         {
           "identifier": "side_panel_article_limit",
-          "type": "range",
+          "type": "list",
           "description": "side_panel_article_limit_description",
           "label": "side_panel_article_limit_label",
-          "value": 10,
-          "min": 1,
-          "max": 50,
-          "step": 1
+          "value": "10",
+          "options": [
+            {
+              "label": "5",
+              "value": "5"
+            },
+            {
+              "label": "10",
+              "value": "10"
+            },
+            {
+              "label": "20",
+              "value": "20"
+            },
+            {
+              "label": "30",
+              "value": "30"
+            }
+          ]
         },
         {
           "identifier": "side_panel_articles_expanded",
